--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="d-flex flex-wrap align-items-stretch">
         <div class="col-lg-4 col-md-6 col-12 order-lg-1 min-vh-100 order-2 bg-white">
           <div class="p-4 m-3">
-            <img src="stisla/assets/img/logo.jpg" alt="logo" width="80" class="shadow-light rounded-circle mb-5 mt-2">
+            <img src="stisla/assets/img/LOGO.jpg" alt="logo" width="80" class="shadow-light rounded-circle mb-5 mt-2">
             <h4 class="text-dark font-weight-normal">Welcome to <span class="font-weight-bold text-danger">Ichibanresto</span></h4>
             <p class="text-muted">Sebelum memesan, masukan nama dan no meja</p>
             <form method="get" action="home.html" class="needs-validation" novalidate="">
