--- a/keranjang.html
+++ b/keranjang.html
@@ -402,7 +402,7 @@
           
           <!-- keranjang -->
               <div class="col-lg-7 offset-lg-1">
-            <div class="row shadow p-3" style="background-color: #ffffff;" id="card-cart"> 
+            <div class="row shadow p-3 mb-5" style="background-color: #ffffff;" id="card-cart"> 
               <div class="col-md-3">
                 <img src="stisla/assets/img/produk/yakiniku.png" style="width: 150px;" alt="...">
               </div>
